[package]
name = "bmm_index"
version = "0.0.0"
edition = "2024"

[lib]
name = "bmm_index"

[[example]]
name = "high_level"
required-features = ["reqwest"]

[dependencies]
bytes = { version = "1.10.1", optional = true }
futures = { version = "0.3.31", optional = true }
log = "0.4.27"
reqwest = { version = "0.12.17", features = ["json"], optional = true }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
zip = { version = "4.0.0", optional = true }

[dev-dependencies]
env_logger = "0.11.8"
futures = "0.3.31"
log = "0.4.27"
reqwest = { version = "0.12.16", features = ["json"] }
serde_json = "1.0.140"
tokio = { version = "1.45.1", features = ["macros", "rt-multi-thread"] }
zip = "4.0.0"

[features]
default = ["zip", "lfs"]
zip = ["dep:zip"]
reqwest = ["dep:reqwest", "dep:futures", "dep:bytes"]
lfs = []

