[package]
name = "balatro_mod_index"
description = "a library for parsing a git lfs repo into a BMM-compatible index"
version = "0.1.0"
edition = "2024"
license-file = "license.md"
exclude = [".gitignore", "flake.*"]
repository = "https://github.com/balatro-mod-index/lib"
keywords = ["balatro", "modding", "git", "lfs", "github"]
categories = [
  "development-tools",
  "encoding",
  "network-programming",
  "parser-implementations",
  "web-programming::http-client"
]

[lib]
name = "balatro_mod_index"

[[example]]
name = "blob_api"
required-features = ["reqwest"]
[[example]]
name = "no_request_wasted"
required-features = ["reqwest"]

[dependencies]
bytes = { version = "1.10.1" }
cached = { version = "0.55.1", features = ["async"], optional = true }
futures = { version = "0.3.31", optional = true }
log = "0.4.27"
reqwest = { version = "0.12.17", features = ["json"], optional = true }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
zip = { version = "4.0.0", optional = true }

[dev-dependencies]
env_logger = "0.11.8"
futures = "0.3.31"
log = "0.4.27"
reqwest = { version = "0.12.16", features = ["json"] }
serde_json = "1.0.140"
tokio = { version = "1.45.1", features = ["macros", "rt-multi-thread"] }
zip = "4.0.0"

[features]
default = ["zip", "lfs"]
zip = ["dep:zip"]
reqwest = ["dep:reqwest", "dep:futures", "dep:cached"]
lfs = []

